# GGP-Ares

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  ares  ares.cfg.json  ares.cpp  makefile  player.cpp  run_tests
gameAnalyzer/: CMakeLists.txt  gameAnalyzer.cpp
include/: ares.hh  static.hh
include/gameAnalyzer/: gameAnalyzer.hh
include/gdlParser/: gdlParser.hh
include/reasoner/: cache.hh  prover.hh  reasoner.hh  substitution.hh  suffixRenamer.hh  unifier.hh  varRenamer.hh
include/strategy/: montecarlo.hh  montecarlo_seq.hh  policies.hh  random.hh  strategy.hh
include/utils/: hashing.hh
include/utils/game/: game.hh  match.hh  state.hh  visualizer.hh
include/utils/gdl/: atom.hh  clause.hh  constant.hh  function.hh  gdl.hh  literal.hh  not.hh  or.hh  term.hh  variable.hh
include/utils/gdl/gdlParser/: exceptions.hh  expressionPool.hh  gdlParser.hh  transformer.hh
include/utils/memory/: body.hh  expressionPool.hh  factory.hh  memCache.hh  memoryPool.hh  namer.hh  queue.hh
include/utils/threading/: callbacks.hh  loadBalancer.hh  locks.hh  threadPool.hh  threading.hh
include/utils/utils/: cfg.hh  color.hh  exceptions.hh  hashing.hh  httpHandler.hh  iterators.hh
reasoner/: CMakeLists.txt  prover.cpp  reasoner.cpp  renamers.cpp  substitution.cpp  suffixRenamer.cpp  unifier.cpp
strategy/: CMakeLists.txt  montecarlo.cpp  montecarlo_seq.cpp  strategy.cpp
tests/: CMakeLists.txt  chess.gdl  monte_test.cpp  simulator.cpp  verifier.cpp
tests/simple/: AnswerList_Test.cpp  Cache_Test.cpp  Test_MemPool.cpp  Test_ThreadPool.cpp  unification.cpp
tests/simple/include/: Test_MemPool.hh  common.hh
tests/stress/: CMakeLists.txt  simulator.cpp  strategy_test.cpp
tests/unit/: AnswerList_Test.cpp  Ares.postman_collection.json  CMakeLists.txt  Cache_Test.cpp  RandAnsList_Test.cpp  Test_ThreadPool.cpp  answerListTest.cpp  cacheTest.cpp  mock_reasoner.cpp  monteTest.cpp  parserTest.cpp  verifier.cpp
tests/unit/include/: Test_MemPool.hh  common.hh  mock_reasoner.hh  mocks.hh  runner.hh
tests/unit/selectedGames/: chess_matches.json  mapping.json  matches.json
utils/: CMakeLists.txt  hashing.cpp  httpHandler.cpp
utils/game/: game.cpp  visualizer.cpp
utils/gdl/: instantiation.cpp  structuredTerm.cpp
utils/gdl/gdlParser/: Stages.md  expressionPool.cpp  gdlParser.cpp  transformer.cpp
utils/memory/: expressionPool.cpp  memCache.cpp  memoryPool.cpp
utils/threading/: loadBalancer.cpp  threadPool.cpp  threading.cpp
utils/utils/: iterators.cpp
visualization/: data.json  index.html  package-lock.json  package.json  vis_server.js
visualization/public/: index.css  index.js
